// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.60)",
          "borderRadius": 5,
          "borderWidth": 2,
          "marginVertical": 20,
          "padding": 20,
        },
        Object {
          "borderColor": "orange",
        },
      ]
    }
  >
    <Text>
      A nice strong password please.
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when passwords match and the password is strong renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.60)",
          "borderRadius": 5,
          "borderWidth": 2,
          "marginVertical": 20,
          "padding": 20,
        },
        Object {
          "borderColor": "orange",
        },
      ]
    }
  >
    <Text>
      A nice strong password please.
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value="s3cuRe!!!"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value="s3cuRe!!!"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when passwords match and the password is weak renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.60)",
          "borderRadius": 5,
          "borderWidth": 2,
          "marginVertical": 20,
          "padding": 20,
        },
        Object {
          "borderColor": "orange",
        },
      ]
    }
  >
    <Text>
      A nice strong password please.
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value="abc"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="active"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value="abc"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="active"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;

exports[`LoginForm when there's an error renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "padding": 40,
      "paddingTop": 80,
    }
  }
>
  <Title
    style={
      Object {
        "fontSize": 30,
        "paddingBottom": 20,
      }
    }
    text="Please complete your profile"
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.60)",
          "borderRadius": 5,
          "borderWidth": 2,
          "marginVertical": 20,
          "padding": 20,
        },
        Object {
          "borderColor": "rgb(208, 2, 27)",
        },
      ]
    }
  >
    <Text>
      Password field empty
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="loading"
      onChangeText={[Function]}
      placeholder="Set password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <NewTextInput
      displayStyle="loading"
      onChangeText={[Function]}
      placeholder="Repeat password"
      secureTextEntry={true}
      textContentType="password"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "baseline",
        "flexDirection": "row-reverse",
        "marginBottom": 20,
      }
    }
  >
    <ButtonSubmit
      display="loading"
      label="Submit"
      onPress={[Function]}
    />
  </View>
</View>
`;
